--- a/speedtest.1
+++ b/speedtest.1
@@ -1,10 +1,10 @@
-Fri Jan 16 12:50:01 AM JST 2026
+Fri Jan 16 12:55:01 AM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (211.7.96.172)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by IPA CyberLab 400G (Tokyo) [5.83 km]: 41.184 ms
+Hosted by Rakuten Mobile, Inc (Tokyo) [0.91 km]: 36.88 ms
 Testing download speed................................................................................
-Download: 125.22 Mbit/s
+Download: 72.94 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 31.90 Mbit/s
+Upload: 22.94 Mbit/s
