--- a/speedtest.2
+++ b/speedtest.2
@@ -1,10 +1,10 @@
-Fri Jan 16 12:45:01 AM JST 2026
+Fri Jan 16 12:50:01 AM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (211.7.96.172)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by Rakuten Mobile, Inc (Sanda) [418.45 km]: 32.671 ms
+Hosted by IPA CyberLab 400G (Tokyo) [5.83 km]: 41.184 ms
 Testing download speed................................................................................
-Download: 180.41 Mbit/s
+Download: 125.22 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 39.56 Mbit/s
+Upload: 31.90 Mbit/s
