--- a/speedtest.1
+++ b/speedtest.1
@@ -1,10 +1,10 @@
-Fri Jan 16 04:35:01 AM JST 2026
+Fri Jan 16 04:40:01 AM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (211.7.96.172)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by IPA CyberLab 400G (Tokyo) [5.83 km]: 41.107 ms
+Hosted by GSL Networks (Tokyo) [0.91 km]: 36.782 ms
 Testing download speed................................................................................
-Download: 148.67 Mbit/s
+Download: 174.12 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 34.25 Mbit/s
+Upload: 36.02 Mbit/s
