--- a/speedtest.2
+++ b/speedtest.2
@@ -1,10 +1,10 @@
-Fri Jan 16 04:45:01 AM JST 2026
+Fri Jan 16 04:50:01 AM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (211.7.96.172)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by Nearoute Limited (Tokyo) [0.91 km]: 34.655 ms
+Hosted by IPA CyberLab (Bunkyo) [6.02 km]: 34.93 ms
 Testing download speed................................................................................
-Download: 59.94 Mbit/s
+Download: 14.40 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 18.11 Mbit/s
+Upload: 34.08 Mbit/s
