--- a/speedtest.2
+++ b/speedtest.2
@@ -1,10 +1,10 @@
-Fri Jan 16 05:45:01 AM JST 2026
+Fri Jan 16 05:50:01 AM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (211.7.96.172)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by Nearoute Limited (Tokyo) [0.91 km]: 39.274 ms
+Hosted by IPA CyberLab 400G (Tokyo) [5.83 km]: 37.85 ms
 Testing download speed................................................................................
-Download: 75.65 Mbit/s
+Download: 163.60 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 13.10 Mbit/s
+Upload: 35.63 Mbit/s
