--- a/speedtest.2
+++ b/speedtest.2
@@ -1,10 +1,10 @@
-Fri Jan 16 05:55:01 AM JST 2026
+Fri Jan 16 06:10:01 AM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (211.7.96.172)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by IPA CyberLab 400G (Tokyo) [5.83 km]: 40.165 ms
+Hosted by IPA CyberLab (Bunkyo) [6.02 km]: 35.659 ms
 Testing download speed................................................................................
-Download: 122.34 Mbit/s
+Download: 19.70 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 34.18 Mbit/s
+Upload: 34.64 Mbit/s
