--- a/speedtest.1
+++ b/speedtest.1
@@ -1,10 +1,10 @@
-Fri Jan 16 07:20:01 AM JST 2026
+Fri Jan 16 07:25:01 AM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (211.7.98.122)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by Rakuten Mobile, Inc (Tokyo) [0.91 km]: 37.09 ms
+Hosted by Rakuten Mobile, Inc (Sanda) [418.45 km]: 32.619 ms
 Testing download speed................................................................................
-Download: 54.21 Mbit/s
+Download: 129.61 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 33.02 Mbit/s
+Upload: 34.39 Mbit/s
