--- a/speedtest.1
+++ b/speedtest.1
@@ -1,10 +1,10 @@
-Fri Jan 16 07:35:02 AM JST 2026
+Fri Jan 16 07:40:01 AM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (211.7.98.122)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by Rakuten Mobile, Inc (Sanda) [418.45 km]: 29.731 ms
+Hosted by Rakuten Mobile, Inc (Tokyo) [0.91 km]: 34.918 ms
 Testing download speed................................................................................
-Download: 124.08 Mbit/s
+Download: 78.79 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 35.63 Mbit/s
+Upload: 33.91 Mbit/s
