--- a/speedtest.1
+++ b/speedtest.1
@@ -1,10 +1,10 @@
-Fri Jan 16 08:35:01 AM JST 2026
+Fri Jan 16 08:40:01 AM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (211.7.98.122)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by Rakuten Mobile, Inc (Tokyo) [0.91 km]: 40.656 ms
+Hosted by Rakuten Mobile, Inc (Sanda) [418.45 km]: 31.722 ms
 Testing download speed................................................................................
-Download: 88.19 Mbit/s
+Download: 125.59 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 32.22 Mbit/s
+Upload: 32.94 Mbit/s
